--- a/src/style/main.css
+++ b/src/style/main.css
@@ -11,6 +11,7 @@
 }
 
 body {
+  min-width: 320px;
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
 }
@@ -19,12 +20,18 @@ main {
   background: var(--background-color);
   width: 100vw;
   height: 100vh;
+  display: grid;
+  place-content: center;
 }
 
 .controls {
+  position: fixed;
+  display: flex;
+  padding: 1rem;
 }
 
 .control {
+  margin-right: 1rem;
 }
 
 .control label {
